// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultItem calls onClick when result is clicked 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 escqfF ckFvxY"
      >
        <a
          aria-label="/alice"
          class="SearchResultsItem__NavLink-sc-hy9axe-1 iiYEDR"
          href="/alice"
          style="justify-content: normal;"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 SearchResultsItem__InnerNavLinkWrapper-sc-hy9axe-0 escqfF bZBWCW"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 hEaoMW ckFvxY fjNDtr dVZbKj"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
              >
                <img
                  alt="alice's profile picture"
                  data-testid="profile-pic"
                />
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 fPYSAT"
                >
                  alice
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 iAChyy"
                >
                  Alice Smith
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 escqfF ckFvxY"
    >
      <a
        aria-label="/alice"
        class="SearchResultsItem__NavLink-sc-hy9axe-1 iiYEDR"
        href="/alice"
        style="justify-content: normal;"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 SearchResultsItem__InnerNavLinkWrapper-sc-hy9axe-0 escqfF bZBWCW"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 hEaoMW ckFvxY fjNDtr dVZbKj"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
            >
              <img
                alt="alice's profile picture"
                data-testid="profile-pic"
              />
            </div>
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 fPYSAT"
              >
                alice
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 iAChyy"
              >
                Alice Smith
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`SearchResultItem renders a hashtag result with HashtagSVG 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 escqfF ckFvxY"
      >
        <a
          aria-label="/explore?q=%23reactjs"
          class="SearchResultsItem__NavLink-sc-hy9axe-1 iiYEDR"
          href="/explore?q=%23reactjs"
          style="justify-content: normal;"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 SearchResultsItem__InnerNavLinkWrapper-sc-hy9axe-0 escqfF bZBWCW"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 hEaoMW ckFvxY fjNDtr dVZbKj"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 SearchResultsItem__SearchIconWrapper-sc-hy9axe-2 dRVeqo iWRTpS"
                >
                  <svg
                    data-testid="hashtag-svg"
                    height="22px"
                    width="22px"
                  />
                </div>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
                >
                  #reactjs
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 escqfF ckFvxY"
    >
      <a
        aria-label="/explore?q=%23reactjs"
        class="SearchResultsItem__NavLink-sc-hy9axe-1 iiYEDR"
        href="/explore?q=%23reactjs"
        style="justify-content: normal;"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 SearchResultsItem__InnerNavLinkWrapper-sc-hy9axe-0 escqfF bZBWCW"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 hEaoMW ckFvxY fjNDtr dVZbKj"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 SearchResultsItem__SearchIconWrapper-sc-hy9axe-2 dRVeqo iWRTpS"
              >
                <svg
                  data-testid="hashtag-svg"
                  height="22px"
                  width="22px"
                />
              </div>
            </div>
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
              >
                #reactjs
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`SearchResultItem renders a plain string result with SearchSVG 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 escqfF ckFvxY"
      >
        <a
          aria-label="/explore?q=hello"
          class="SearchResultsItem__NavLink-sc-hy9axe-1 iiYEDR"
          href="/explore?q=hello"
          style="justify-content: normal;"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 SearchResultsItem__InnerNavLinkWrapper-sc-hy9axe-0 escqfF bZBWCW"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 hEaoMW ckFvxY fjNDtr dVZbKj"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 SearchResultsItem__SearchIconWrapper-sc-hy9axe-2 dRVeqo iWRTpS"
                >
                  <svg
                    data-testid="search-svg"
                    height="22px"
                    width="22px"
                  />
                </div>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
                >
                  hello
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 escqfF ckFvxY"
    >
      <a
        aria-label="/explore?q=hello"
        class="SearchResultsItem__NavLink-sc-hy9axe-1 iiYEDR"
        href="/explore?q=hello"
        style="justify-content: normal;"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 SearchResultsItem__InnerNavLinkWrapper-sc-hy9axe-0 escqfF bZBWCW"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 hEaoMW ckFvxY fjNDtr dVZbKj"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 SearchResultsItem__SearchIconWrapper-sc-hy9axe-2 dRVeqo iWRTpS"
              >
                <svg
                  data-testid="search-svg"
                  height="22px"
                  width="22px"
                />
              </div>
            </div>
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
              >
                hello
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`SearchResultItem renders a profile result with profile pic and user info 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 escqfF ckFvxY"
      >
        <a
          aria-label="/alice"
          class="SearchResultsItem__NavLink-sc-hy9axe-1 iiYEDR"
          href="/alice"
          style="justify-content: normal;"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 SearchResultsItem__InnerNavLinkWrapper-sc-hy9axe-0 escqfF bZBWCW"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 hEaoMW ckFvxY fjNDtr dVZbKj"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
              >
                <img
                  alt="alice's profile picture"
                  data-testid="profile-pic"
                />
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 fPYSAT"
                >
                  alice
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 iAChyy"
                >
                  Alice Smith
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 escqfF ckFvxY"
    >
      <a
        aria-label="/alice"
        class="SearchResultsItem__NavLink-sc-hy9axe-1 iiYEDR"
        href="/alice"
        style="justify-content: normal;"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 SearchResultsItem__InnerNavLinkWrapper-sc-hy9axe-0 escqfF bZBWCW"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 hEaoMW ckFvxY fjNDtr dVZbKj"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
            >
              <img
                alt="alice's profile picture"
                data-testid="profile-pic"
              />
            </div>
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 fPYSAT"
              >
                alice
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 iAChyy"
              >
                Alice Smith
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`SearchResultItem renders remove button and calls onRemove when clicked 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 escqfF ckFvxY"
      >
        <a
          aria-label="/alice"
          class="SearchResultsItem__NavLink-sc-hy9axe-1 iiYEDR"
          href="/alice"
          style="justify-content: normal;"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 SearchResultsItem__InnerNavLinkWrapper-sc-hy9axe-0 escqfF bZBWCW"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 hEaoMW ckFvxY fjNDtr dVZbKj"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
              >
                <img
                  alt="alice's profile picture"
                  data-testid="profile-pic"
                />
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 fPYSAT"
                >
                  alice
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 iAChyy"
                >
                  Alice Smith
                </div>
              </div>
              <a
                data-testid="styled-link"
                style="margin-right: 5px;"
              >
                <svg
                  data-testid="x-svg"
                />
              </a>
            </div>
          </div>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 escqfF ckFvxY"
    >
      <a
        aria-label="/alice"
        class="SearchResultsItem__NavLink-sc-hy9axe-1 iiYEDR"
        href="/alice"
        style="justify-content: normal;"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 SearchResultsItem__InnerNavLinkWrapper-sc-hy9axe-0 escqfF bZBWCW"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 CombinedStyling__FlexRowFullWidth-sc-c3jdxk-5 hEaoMW ckFvxY fjNDtr dVZbKj"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
            >
              <img
                alt="alice's profile picture"
                data-testid="profile-pic"
              />
            </div>
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 CombinedStyling__FlexColumnFullWidth-sc-c3jdxk-6 escqfF ckFvxY leZDxE dWuEVk"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 fPYSAT"
              >
                alice
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 iAChyy"
              >
                Alice Smith
              </div>
            </div>
            <a
              data-testid="styled-link"
              style="margin-right: 5px;"
            >
              <svg
                data-testid="x-svg"
              />
            </a>
          </div>
        </div>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
